@@ -59,6 +59,8 @@ Features
 * Added `unescape_body` option to HttpListenInput to allow users to turn off
   unescaping of the HTTP request body (#1124).
 
+* Added `send_interval` setting to SmtpOutput.
+
 0.8.1 (2014-MM-DD)
 ==================
 
